<?xml version="1.0"?>
<package format="2">
  <name>pubkitti</name>
  <version>0.0.0</version>
  <description> a simple kitti dataset odometry sequence's image and point cloud data publisher </description>

  <maintainer email="paulgkim@kaist.ac.kr">irap</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf2</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf2</exec_depend>

  <export>

  </export>
</package>
